fix nav collapse on click

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
+  font-family: 'Kanit';
 }
 
 
@@ -84,6 +85,10 @@ PROJECTS
 
 .btn {
   border: white 1px solid;
+}
+
+.btn :hover {
+  color: red;
 }
 
 .button-area {
